{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 740,
  "lineage": "1ee4afef-79c5-4b66-6a83-a0ca3d7b5051",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:security-group/sg-0c06df5f613896e86",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c06df5f613896e86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FargateSatya-sg",
            "name_prefix": "",
            "owner_id": "061280019180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FargateSatya-sg"
            },
            "tags_all": {
              "Name": "FargateSatya-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd987a428b8aa39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:security-group/sg-0f4853f8c7b0a29d4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4853f8c7b0a29d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c06df5f613896e86"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "satyasg",
            "name_prefix": "",
            "owner_id": "061280019180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satyafargatesg"
            },
            "tags_all": {
              "Name": "satyafargatesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd987a428b8aa39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0030e564e7a20190c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0030e564e7a20190c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSatyaFargate-2"
            },
            "tags_all": {
              "Name": "PrivateSatyaFargate-2"
            },
            "vpc_id": "vpc-02cd987a428b8aa39"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:vpc/vpc-02cd987a428b8aa39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0075e6cf8cfbb60b3",
            "default_route_table_id": "rtb-0fba04d3d655e8270",
            "default_security_group_id": "sg-0c247268a78f77ecb",
            "dhcp_options_id": "dopt-0de6b8c89f1565f94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02cd987a428b8aa39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fba04d3d655e8270",
            "owner_id": "061280019180",
            "tags": {
              "Name": "SatyaFargateVPC"
            },
            "tags_all": {
              "Name": "SatyaFargateVPC"
            }
          }
        }
      ]
    }
  ]
}